# POC-AI

./: .pdm-python  README  app.py  pyproject.toml
www/: style.css
