[project]
name = "POC-AI"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "camilo_bpt", email = ""},
]
dependencies = ["databricks-sql-connector>=4.0.0", "openai>=1.66.3", "shiny>=1.3.0", "email>=4.0.2"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
